force-app/main/default/objects/Bike_Order__c/Bike_Order__c.object-meta.xml
<CustomObject>
    <label>Bike Order</label>
    <nameField>
        <displayFormat>BO-{00000}</displayFormat>
        <label>Bike Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bike Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>