force-app/main/default/objects/Bike_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <!-- TODO: Account is required for Bike Order. Metadata configuration ensures relationship. -->
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bike Orders</relationshipLabel>
    <relationshipName>Bike_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>