force-app/main/default/objects/Bike_Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Bike_Order_Item__c.Line_Total__c</summarizedField>
    <summaryForeignKey>Bike_Order_Item__c.Bike_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>